--- a/composer.json
+++ b/composer.json
@@ -11,6 +11,12 @@
     ],
     "authors": [
         {
+            "name": "Lorenzo Padovani",
+            "email": "helpdesk@padosoft.com",
+            "homepage": "https://www.padosoft.com",
+            "role": "Developer"
+        },
+        {
             "name": "Leonardo Padovani",
             "email": "helpdesk@padosoft.com",
             "homepage": "https://www.padosoft.com",
@@ -18,15 +24,15 @@
         }
     ],
     "require": {
-        "php": ">=7.0.0",
-        "illuminate/contracts": ">=5.0 <6.0",
-        "illuminate/encryption": ">=5.0 <6.0",
+        "php": ">=7.1.3",
+        "illuminate/contracts": ">=5.8 <6.0",
+        "illuminate/encryption": ">=5.8 <6.0",
         "doctrine/dbal": "^2.6",
-        "illuminate/database": ">=5.0 <6.0",
-        "genealabs/laravel-model-caching": ">=0.2.57 <=0.3.1"
+        "illuminate/database": ">=5.8 <6.0",
+        "genealabs/laravel-model-caching": ">=0.5.3 <=0.5.99"
     },
     "require-dev": {
-        "orchestra/testbench": "~3.3.0|~3.4.2|^3.5.0",
+        "orchestra/testbench": "^3.8.2",
         "mockery/mockery": "^1.1"
     },
     "autoload": {
