--- a/composer.json
+++ b/composer.json
@@ -27,7 +27,7 @@
         "php": ">=7.1.3",
         "illuminate/contracts": "^7.0|^8.0",
         "illuminate/encryption": "^7.0|^8.0",
-        "doctrine/dbal": "^2.6",
+        "doctrine/dbal": "^2.6|^3.0",
         "illuminate/database": "^7.0|^8.0",
         "genealabs/laravel-model-caching": ">=0.8.0 <0.12.0"
     },
