--- a/composer.json
+++ b/composer.json
@@ -25,15 +25,15 @@
     ],
     "require": {
         "php": ">=7.1.3",
-        "illuminate/contracts": ">=5.8 <6.0",
-        "illuminate/encryption": ">=5.8 <6.0",
+        "illuminate/contracts": ">=5.8|^6.0|^7.0|^8.0",
+        "illuminate/encryption": ">=5.8|^6.0|^7.0|^8.0",
         "doctrine/dbal": "^2.6",
-        "illuminate/database": ">=5.8 <6.0",
-        "genealabs/laravel-model-caching": ">=0.5.3 <=0.5.99"
+        "illuminate/database": ">=5.8|^6.0|^7.0|^8.0",
+        "genealabs/laravel-model-caching": ">=0.5.3 <0.12"
     },
     "require-dev": {
-        "orchestra/testbench": "^3.8.2",
-        "mockery/mockery": "^1.1"
+        "orchestra/testbench": "^3.8.2|^4.0|^5.0|^6.0",
+        "mockery/mockery": "^1.4"
     },
     "autoload": {
         "files": [
