--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -43,15 +43,15 @@ jobs:
           key: v1-dependencies-{{ checksum "composer.json" }}
           paths:
             - ./vendor
-      - restore_cache:
-          keys:
-            - node-v1-{{ checksum "package.json" }}
-            - node-v1-
+      #- restore_cache:
+      #    keys:
+      #      - node-v1-{{ checksum "package.json" }}
+      #      - node-v1-
       - run: yarn install
-      - save_cache:
-          key: node-v1-{{ checksum "package.json" }}
-          paths:
-            - node_modules
+      #- save_cache:
+      #    key: node-v1-{{ checksum "package.json" }}
+      #    paths:
+      #      - node_modules
 
       # prepare the database
       #- run: touch storage/testing.sqlite
@@ -59,5 +59,4 @@ jobs:
 
       # run tests with phpunit or codecept
       - run: ./vendor/bin/phpunit --coverage-text --coverage-clover=coverage.clover
-      - run: ./vendor/bin/codecept build
-      - run: ./vendor/bin/codecept run
+      
