--- a/composer.json
+++ b/composer.json
@@ -27,6 +27,7 @@
         "php": ">=7.1.3",
         "illuminate/contracts": ">=5.8|^6.0|^7.0|^8.0",
         "illuminate/encryption": ">=5.8|^6.0|^7.0|^8.0",
+        "illuminate/validation": ">=5.8|^6.0|^7.0|^8.0",
         "doctrine/dbal": "^2.6",
         "illuminate/database": ">=5.8|^6.0|^7.0|^8.0",
         "genealabs/laravel-model-caching": ">=0.5.3 <0.12"
