--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -26,8 +26,8 @@ jobs:
     steps:
       - checkout
 
-      - run: sudo apt update # PHP CircleCI 2.0 Configuration File# PHP CircleCI 2.0 Configuration File sudo apt install zlib1g-dev libsqlite3-dev
-      - run: sudo docker-php-ext-install zip
+      - run: sudo apt update -y && apt-get install -y zip unzip # PHP CircleCI 2.0 Configuration File# PHP CircleCI 2.0 Configuration File sudo apt install zlib1g-dev libsqlite3-dev
+      #- run: sudo docker-php-ext-install zip
 
       # Download and cache dependencies
       - restore_cache:
@@ -59,4 +59,3 @@ jobs:
 
       # run tests with phpunit or codecept
       - run: ./vendor/bin/phpunit --coverage-text --coverage-clover=coverage.clover
-      
