--- a/composer.json
+++ b/composer.json
@@ -25,16 +25,16 @@
     ],
     "require": {
         "php": ">=7.1.3",
-        "illuminate/contracts": ">=5.8|^6.0|^7.0|^8.0|^9.0",
-        "illuminate/encryption": ">=5.8|^6.0|^7.0|^8.0|^9.0",
-        "illuminate/validation": ">=5.8|^6.0|^7.0|^8.0|^9.0",
+        "illuminate/contracts": ">=5.8|^6.0|^7.0|^8.0|^9.0|^10.0",
+        "illuminate/encryption": ">=5.8|^6.0|^7.0|^8.0|^9.0|^10.0",
+        "illuminate/validation": ">=5.8|^6.0|^7.0|^8.0|^9.0|^10.0",
         "doctrine/dbal": "^3.3",
-        "illuminate/database": ">=5.8|^6.0|^7.0|^8.0|^9.0",
-        "genealabs/laravel-model-caching": "0.11|>=0.12 <0.13"
+        "illuminate/database": ">=5.8|^6.0|^7.0|^8.0|^9.0|^10.0",
+        "genealabs/laravel-model-caching": "0.11|>=0.12 <0.14"
     },
     "require-dev": {
         "roave/security-advisories": "dev-latest",
-        "orchestra/testbench": "^3.8.2|^4.0|^5.0|^6.0|^7.0",
+        "orchestra/testbench": "^3.8.2|^4.0|^5.0|^6.0|^7.0|^8.0",
         "mockery/mockery": "^1.5"
     },
     "autoload": {
