--- a/composer.json
+++ b/composer.json
@@ -24,18 +24,18 @@
         }
     ],
     "require": {
-        "php": ">=7.1.3",
+        "php": ">=7.4",
         "illuminate/contracts": ">=5.8|^6.0|^7.0|^8.0|^9.0|^10.0",
         "illuminate/encryption": ">=5.8|^6.0|^7.0|^8.0|^9.0|^10.0",
         "illuminate/validation": ">=5.8|^6.0|^7.0|^8.0|^9.0|^10.0",
         "doctrine/dbal": "^3.3",
-        "illuminate/database": ">=5.8|^6.0|^7.0|^8.0|^9.0|^10.0",
-        "genealabs/laravel-model-caching": "0.11|>=0.12 <0.14"
+        "illuminate/database": ">=5.8|^6.0|^7.0|^8.0|^9.0|^10.0"
     },
     "require-dev": {
         "roave/security-advisories": "dev-latest",
         "orchestra/testbench": "^3.8.2|^4.0|^5.0|^6.0|^7.0|^8.0",
-        "mockery/mockery": "^1.5"
+        "mockery/mockery": "^1.5",
+        "josiasmontag/laravel-redis-mock": "^1.3"
     },
     "autoload": {
         "files": [
