--- a/composer.json
+++ b/composer.json
@@ -25,15 +25,14 @@
     ],
     "require": {
         "php": ">=7.4",
-        "illuminate/contracts": ">=5.8|^6.0|^7.0|^8.0|^9.0|^10.0",
-        "illuminate/encryption": ">=5.8|^6.0|^7.0|^8.0|^9.0|^10.0",
-        "illuminate/validation": ">=5.8|^6.0|^7.0|^8.0|^9.0|^10.0",
-        "doctrine/dbal": "^3.3",
-        "illuminate/database": ">=5.8|^6.0|^7.0|^8.0|^9.0|^10.0"
+        "illuminate/contracts": "^11.0",
+        "illuminate/encryption": "^11.0",
+        "illuminate/validation": "^11.0",
+        "illuminate/database": "^11.0"
     },
     "require-dev": {
         "roave/security-advisories": "dev-latest",
-        "orchestra/testbench": "^3.8.2|^4.0|^5.0|^6.0|^7.0|^8.0",
+        "orchestra/testbench": "^3.8.2|^4.0|^5.0|^6.0|^7.0|^8.0|^9.0",
         "mockery/mockery": "^1.5",
         "josiasmontag/laravel-redis-mock": "^1.3"
     },
@@ -64,5 +63,8 @@
         }
     },
     "minimum-stability": "dev",
-    "prefer-stable": true
+    "prefer-stable": true,
+    "config": {
+        "cache-dir": "/dev/shm/composer/cache"
+    }
 }
