--- a/composer.json
+++ b/composer.json
@@ -25,10 +25,10 @@
     ],
     "require": {
         "php": ">=7.4",
-        "illuminate/contracts": "^11.0",
-        "illuminate/encryption": "^11.0",
-        "illuminate/validation": "^11.0",
-        "illuminate/database": "^11.0"
+        "illuminate/contracts": ">=5.8|^6.0|^7.0|^8.0|^9.0|^10.0|^11.0",
+        "illuminate/encryption": ">=5.8|^6.0|^7.0|^8.0|^9.0|^10.0|^11.0",
+        "illuminate/validation": ">=5.8|^6.0|^7.0|^8.0|^9.0|^10.0|^11.0",
+        "illuminate/database": ">=5.8|^6.0|^7.0|^8.0|^9.0|^10.0|^11.0"
     },
     "require-dev": {
         "roave/security-advisories": "dev-latest",
